# web-intelligence

./: .env  .gitignore  LICENSE  README.md  __init__.py  benchmark.py  check_database.py  examples.py  examples_with_langchain.py  langchain.py  main.py  pyproject.toml  requirements.txt  test_wikipedia.py
src/: chunker.py  crawler.py  embedder.py  pipeline.py  vector_store.py
web_intelligence/: __init__.py  async_crawler.py  cache.py  chunker.py  extractor.py  fast_embedder.py  optimized_pipeline.py  vector_store.py
