[project]
name = "web-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "sentence-transformers>=5.2.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.40.0",
]
