[project]
name = "web-intelligence"
version = "0.2.0"
description = "Fast web crawling, extraction, and semantic search library - 100% FREE, runs locally!"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "web-crawling",
    "semantic-search",
    "embeddings",
    "vector-database",
    "nlp",
    "machine-learning",
    "async",
    "gpu-acceleration"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "httpx[http2]>=0.28.1",
    "langchain-google-genai>=4.2.0",
    "sentence-transformers>=5.2.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/web-intelligence"
Documentation = "https://github.com/yourusername/web-intelligence#readme"
Repository = "https://github.com/yourusername/web-intelligence"
Issues = "https://github.com/yourusername/web-intelligence/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "black>=26.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["web_intelligence"]
